Better state handling for analysis notebook

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,7 +9,7 @@
     "%matplotlib tk\n",
     "\n",
     "import numpy as np\n",
-    "from typing import List, Optional, Dict\n",
+    "from typing import List, Optional, Tuple\n",
     "\n",
     "def plot_multiple_y_axes(\n",
     "    x: np.ndarray,\n",
@@ -20,12 +20,12 @@
     "    y_labels: Optional[List[str]] = None,\n",
     "    title: Optional[str] = None,\n",
     "    add_zero_lines: bool = True,\n",
-    "    vertical_lines: Optional[Dict[str, float]] = None\n",
+    "    vertical_lines: Optional[List[Tuple[float, str]]] = None\n",
     ") -> None:\n",
     "    \"\"\"\n",
     "    Plots multiple y-series each with their own y-axis on a single plot, with optional zero lines\n",
-    "    and vertical lines at specified x values. The vertical line labels are drawn vertically (rotated 90°)\n",
-    "    and are positioned above the plot.\n",
+    "    and vertical lines at specified timestamps. Vertical line labels (state names) are drawn vertically\n",
+    "    (rotated 90°) and positioned above the plot.\n",
     "\n",
     "    Parameters:\n",
     "    - x (array-like): Data for the x-axis.\n",
@@ -36,7 +36,7 @@
     "    - y_labels (list of str, optional): List of labels for each y-axis. If not provided, `labels` are used.\n",
     "    - title (str, optional): Title of the plot.\n",
     "    - add_zero_lines (bool, optional): Whether to add horizontal zero lines for each y-axis. Default is True.\n",
-    "    - vertical_lines (dict, optional): Dictionary mapping labels (str) to x-values (float) where vertical lines\n",
+    "    - vertical_lines (list of tuples, optional): List of tuples (timestamp, state_name) where vertical lines\n",
     "      will be drawn.\n",
     "\n",
     "    Returns:\n",
@@ -58,8 +58,8 @@
     "        raise ValueError(\"Length of colors must match number of y-series.\")\n",
     "    if y_labels and len(y_labels) != len(y_data):\n",
     "        raise ValueError(\"Length of y_labels must match number of y-series.\")\n",
-    "    if vertical_lines is not None and not isinstance(vertical_lines, dict):\n",
-    "        raise TypeError(\"vertical_lines must be a dictionary mapping labels to x values.\")\n",
+    "    if vertical_lines is not None and not isinstance(vertical_lines, list):\n",
+    "        raise TypeError(\"vertical_lines must be a list of tuples (timestamp, state_name).\")\n",
     "\n",
     "    num_series = len(y_data)\n",
     "    if num_series < 1:\n",
@@ -134,10 +134,10 @@
     "    if vertical_lines:\n",
     "        # Create a blended transform: x in data coords, y in axes fraction.\n",
     "        transform = blended_transform_factory(host.transData, host.transAxes)\n",
-    "        for v_label, x_val in vertical_lines.items():\n",
-    "            host.axvline(x=x_val, color='gray', linestyle='--', linewidth=1)\n",
+    "        for timestamp, state_name in vertical_lines:\n",
+    "            host.axvline(x=timestamp, color='gray', linestyle='--', linewidth=1)\n",
     "            host.text(\n",
-    "                x_val, 1.02, v_label,\n",
+    "                timestamp, 1.02, state_name,\n",
     "                transform=transform,\n",
     "                rotation=90,\n",
     "                verticalalignment='bottom',\n",
@@ -226,42 +226,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing Command: py scripts/decode_protobuf_bin.py sensor D:\\sensor\\dat_2024-02-11-2.pb3 sim_out/sensor.csv\n",
+      "Executing Command: py scripts/decode_protobuf_bin.py sensor D:\\sensor\\dat_2025-02-19-6.pb3 sim_out/sensor.csv\n",
       "-------------------------------------------------------------------------------------------------------------\n",
+      "Command failed with return code 1\n",
       "Output:\n",
       "Copying input file to temporary\n",
-      "Copied 2910.7 KiB in 8.7 s\n",
-      "Average copy speed 334.3 KiB/s\n",
       "\n",
-      "Firmware specifier: pal_fsl_test-151-g0c1659f -0x33cb0f5bbe244f3\n",
+      "Error Output:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\imomg\\Programming\\PSP-HA-Firmware\\scripts\\decode_protobuf_bin.py\", line 124, in <module>\n",
+      "    with open(input_bin_path, 'rb') as original_file:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'D:\\\\sensor\\\\dat_2025-02-19-6.pb3'\n",
       "\n",
-      "Decoded 39039 elements in 0.096550 seconds\n",
-      "Written 39039 elements to CSV in 1.066193 seconds\n",
-      "\n",
-      "Executing Command: py scripts/decode_protobuf_bin.py state D:\\state\\fsl_2024-02-11-2.pb3 sim_out/state.csv\n",
+      "Executing Command: py scripts/decode_protobuf_bin.py state D:\\state\\fsl_2025-02-19-6.pb3 sim_out/state.csv\n",
       "----------------------------------------------------------------------------------------------------------\n",
+      "Command failed with return code 1\n",
       "Output:\n",
       "Copying input file to temporary\n",
-      "Copied 4204.9 KiB in 12.5 s\n",
-      "Average copy speed 335.1 KiB/s\n",
       "\n",
-      "Firmware specifier: pal_fsl_test-151-g0c1659f -0x33cb0f5bbe244f3\n",
-      "\n",
-      "Decoded 39040 elements in 0.097214 seconds\n",
-      "Written 39040 elements to CSV in 1.551290 seconds\n",
+      "Error Output:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\imomg\\Programming\\PSP-HA-Firmware\\scripts\\decode_protobuf_bin.py\", line 124, in <module>\n",
+      "    with open(input_bin_path, 'rb') as original_file:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'D:\\\\state\\\\fsl_2025-02-19-6.pb3'\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "file_suffix = '2024-02-11-2'\n",
+    "file_suffix = '2025-02-19-6'\n",
     "\n",
     "sensor_result = execute_shell_command(rf'py scripts/decode_protobuf_bin.py sensor D:\\sensor\\dat_{file_suffix}.pb3 sim_out/sensor.csv')\n",
     "state_result = execute_shell_command(rf'py scripts/decode_protobuf_bin.py state D:\\state\\fsl_{file_suffix}.pb3 sim_out/state.csv')\n"
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,13 +296,14 @@
     "    \"FP_DROGUE\",\n",
     "    \"FP_MAIN\",\n",
     "    \"FP_LANDED\",\n",
+    "    \"FP_ERROR\",\n",
     "]\n",
     "\n",
     "transitions = combined[combined[\"flight_phase\"] != combined[\"flight_phase\"].shift()]\n",
-    "transitions = {\n",
-    "    state_names[int(transition[\"flight_phase\"])]: transition[\"timestamp\"]/1e6\n",
+    "transitions = [\n",
+    "    (transition[\"timestamp\"]/1e6, state_names[int(transition[\"flight_phase\"])])\n",
     "    for idx, transition in transitions.iterrows()\n",
-    "}\n",
+    "]\n",
     "\n",
     "def pressure_alt(p):\n",
     "    return 44330 * (1 - (((p) / 1013.25)**( 1 / 5.255)))\n",
@@ -311,7 +314,7 @@
     "pressure = combined['pressure']\n",
     "altitude = combined['pos_vert']\n",
     "velocity = combined['vel_vert']\n",
-    "acceleration = combined['acc_h_z']\n",
+    "acceleration = combined['acc_vert']\n",
     "\n",
     "plot_multiple_y_axes(\n",
     "    times,\n",
