Add EH2 HWIL support and data

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,8 @@
     "\n",
     "def plot_multiple_y_axes(\n",
     "    x: np.ndarray,\n",
-    "    y_data: List[np.ndarray],\n",
-    "    labels: List[str],\n",
-    "    colors: Optional[List[str]] = None,\n",
+    "    y_data: List[List[np.ndarray]],\n",
+    "    labels: List[List[str]],\n",
     "    x_label: str = \"X-axis\",\n",
     "    y_labels: Optional[List[str]] = None,\n",
     "    title: Optional[str] = None,\n",
@@ -23,21 +22,21 @@
     "    vertical_lines: Optional[List[Tuple[float, str]]] = None\n",
     ") -> None:\n",
     "    \"\"\"\n",
-    "    Plots multiple y-series each with their own y-axis on a single plot, with optional zero lines\n",
-    "    and vertical lines at specified timestamps. Vertical line labels (state names) are drawn vertically\n",
-    "    (rotated 90°) and positioned above the plot.\n",
+    "    Plots multiple y-series on multiple y-axes on a single plot. Each entry in y_data represents an axis,\n",
+    "    and each inner list contains the data series to be plotted on that axis. Similarly, labels is a list of lists\n",
+    "    containing the legend labels for each series on that axis. Additionally, vertical dashed lines can be drawn at\n",
+    "    specified timestamps with vertically rotated labels positioned above the plot.\n",
     "\n",
     "    Parameters:\n",
-    "    - x (array-like): Data for the x-axis.\n",
-    "    - y_data (list of array-like): List containing y-axis data series.\n",
-    "    - labels (list of str): List of labels for each y-axis series.\n",
-    "    - colors (list of str, optional): List of colors for each series. Defaults to Matplotlib's default colors.\n",
+    "    - x (np.ndarray): Data for the x-axis.\n",
+    "    - y_data (List[List[np.ndarray]]): Outer list represents each axis; inner lists contain the data series for that axis.\n",
+    "    - labels (List[List[str]]): Outer list represents each axis; inner lists contain the legend labels for each series.\n",
     "    - x_label (str, optional): Label for the x-axis. Default is \"X-axis\".\n",
-    "    - y_labels (list of str, optional): List of labels for each y-axis. If not provided, `labels` are used.\n",
+    "    - y_labels (List[str], optional): List of y-axis labels, one per axis. If not provided, defaults to \"Axis 1\", \"Axis 2\", etc.\n",
     "    - title (str, optional): Title of the plot.\n",
-    "    - add_zero_lines (bool, optional): Whether to add horizontal zero lines for each y-axis. Default is True.\n",
-    "    - vertical_lines (list of tuples, optional): List of tuples (timestamp, state_name) where vertical lines\n",
-    "      will be drawn.\n",
+    "    - add_zero_lines (bool, optional): Whether to add horizontal zero lines for each axis. Default is True.\n",
+    "    - vertical_lines (List[Tuple[float, str]], optional): List of tuples (timestamp, state_name) where vertical lines\n",
+    "      will be drawn. The state_name is rotated vertically and placed above the plot.\n",
     "\n",
     "    Returns:\n",
     "    - None. Displays the plot.\n",
@@ -47,92 +46,103 @@
     "    import mpl_toolkits.axisartist as AA\n",
     "    from matplotlib.transforms import blended_transform_factory\n",
     "\n",
-    "    # Parameter Validation\n",
+    "    # --- Parameter validation ---\n",
     "    if not isinstance(y_data, list):\n",
-    "        raise TypeError(\"y_data should be a list of y-series.\")\n",
+    "        raise TypeError(\"y_data should be a list of lists of y-series.\")\n",
     "    if not isinstance(labels, list):\n",
-    "        raise TypeError(\"labels should be a list of strings.\")\n",
+    "        raise TypeError(\"labels should be a list of lists of strings.\")\n",
     "    if len(y_data) != len(labels):\n",
-    "        raise ValueError(\"y_data and labels must have the same length.\")\n",
-    "    if colors and len(colors) != len(y_data):\n",
-    "        raise ValueError(\"Length of colors must match number of y-series.\")\n",
-    "    if y_labels and len(y_labels) != len(y_data):\n",
-    "        raise ValueError(\"Length of y_labels must match number of y-series.\")\n",
-    "    if vertical_lines is not None and not isinstance(vertical_lines, list):\n",
-    "        raise TypeError(\"vertical_lines must be a list of tuples (timestamp, state_name).\")\n",
+    "        raise ValueError(\"The outer lists of y_data and labels must have the same length (one per axis).\")\n",
+    "    for i, (axis_data, axis_labels) in enumerate(zip(y_data, labels)):\n",
+    "        if len(axis_data) != len(axis_labels):\n",
+    "            raise ValueError(f\"Length mismatch in axis {i}: each data series must have a corresponding label.\")\n",
     "\n",
-    "    num_series = len(y_data)\n",
-    "    if num_series < 1:\n",
-    "        raise ValueError(\"At least one y-series must be provided.\")\n",
+    "    num_axes = len(y_data)\n",
+    "    if num_axes < 1:\n",
+    "        raise ValueError(\"At least one axis (y-data list) must be provided.\")\n",
     "\n",
-    "    # Define default colors if not provided\n",
-    "    if not colors:\n",
-    "        prop_cycle = plt.rcParams['axes.prop_cycle']\n",
-    "        default_colors = prop_cycle.by_key()['color']\n",
-    "        colors = default_colors * ((num_series // len(default_colors)) + 1)\n",
-    "        colors = colors[:num_series]\n",
+    "    # Set default y-axis labels if not provided\n",
+    "    if y_labels is None:\n",
+    "        y_labels = [f\"Axis {i+1}\" for i in range(num_axes)]\n",
+    "    if len(y_labels) != num_axes:\n",
+    "        raise ValueError(\"Length of y_labels must match the number of axes in y_data.\")\n",
     "\n",
-    "    # Define default y_labels if not provided\n",
-    "    if not y_labels:\n",
-    "        y_labels = labels\n",
+    "    # --- Generate Colors Automatically ---\n",
+    "    # Use the default color cycle and assign one color per series (cycling if needed)\n",
+    "    prop_cycle = plt.rcParams['axes.prop_cycle']\n",
+    "    default_colors = prop_cycle.by_key()['color']\n",
+    "    def color_gen():\n",
+    "        idx = 0\n",
+    "        while True:\n",
+    "            yield default_colors[idx % len(default_colors)]\n",
+    "            idx += 1\n",
+    "    cg = color_gen()\n",
     "\n",
-    "    # Create Host Subplot\n",
+    "    # --- Create Host and Additional Axes ---\n",
     "    fig = plt.figure(figsize=(10, 6))\n",
     "    host = host_subplot(111, axes_class=AA.Axes)\n",
     "    plt.subplots_adjust(right=0.75)\n",
     "\n",
-    "    # Create Additional Axes\n",
-    "    par_axes = []\n",
-    "    for i in range(1, num_series):\n",
+    "    # Set the x-axis label on the host axis\n",
+    "    host.set_xlabel(x_label)\n",
+    "\n",
+    "    # Create additional twin axes for each extra y-axis (beyond the first)\n",
+    "    twin_axes = []\n",
+    "    for i in range(1, num_axes):\n",
     "        par = host.twinx()\n",
-    "        par_axes.append(par)\n",
+    "        twin_axes.append(par)\n",
     "\n",
-    "    # Offset the additional axes\n",
+    "    # Offset the additional axes to avoid label overlap\n",
     "    offset = 60  # pixels\n",
-    "    for i, par in enumerate(par_axes):\n",
+    "    for i, par in enumerate(twin_axes):\n",
     "        new_fixed_axis = par.get_grid_helper().new_fixed_axis\n",
-    "        par.axis[\"right\"] = new_fixed_axis(loc=\"right\",\n",
-    "                                           axes=par,\n",
-    "                                           offset=(offset * i, 0))\n",
+    "        par.axis[\"right\"] = new_fixed_axis(loc=\"right\", axes=par, offset=(offset * i, 0))\n",
     "        par.axis[\"right\"].toggle(all=True)\n",
-    "\n",
-    "    # Hide the right spine of the host plot\n",
     "    host.axis[\"right\"].toggle(all=True)\n",
     "\n",
-    "    # Set Labels\n",
-    "    host.set_xlabel(x_label)\n",
+    "    # --- Plot the Data Series ---\n",
+    "    all_lines = []   # To collect line handles for the combined legend\n",
+    "    all_leg_labels = []  # Corresponding legend labels\n",
+    "\n",
+    "    # Plot series on the host axis (axis index 0)\n",
+    "    host_lines = []\n",
+    "    for series, lab in zip(y_data[0], labels[0]):\n",
+    "        c = next(cg)\n",
+    "        line, = host.plot(x, series, color=c, label=lab)\n",
+    "        host_lines.append(line)\n",
+    "        all_lines.append(line)\n",
+    "        all_leg_labels.append(lab)\n",
     "    host.set_ylabel(y_labels[0])\n",
-    "    for i, par in enumerate(par_axes):\n",
-    "        par.set_ylabel(y_labels[i+1])\n",
+    "    if host_lines:\n",
+    "        host.axis[\"left\"].label.set_color(host_lines[0].get_color())\n",
     "\n",
-    "    # Plot the Data\n",
-    "    lines = []\n",
-    "    # Plot on host\n",
-    "    p, = host.plot(x, y_data[0], color=colors[0], label=labels[0])\n",
-    "    lines.append(p)\n",
-    "    # Plot on additional axes\n",
-    "    for i, par in enumerate(par_axes):\n",
-    "        p, = par.plot(x, y_data[i+1], color=colors[i+1], label=labels[i+1])\n",
-    "        lines.append(p)\n",
+    "    # Plot series on each additional axis\n",
+    "    for idx, par in enumerate(twin_axes, start=1):\n",
+    "        par_lines = []\n",
+    "        for series, lab in zip(y_data[idx], labels[idx]):\n",
+    "            c = next(cg)\n",
+    "            line, = par.plot(x, series, color=c, label=lab)\n",
+    "            par_lines.append(line)\n",
+    "            all_lines.append(line)\n",
+    "            all_leg_labels.append(lab)\n",
+    "        par.set_ylabel(y_labels[idx])\n",
+    "        if par_lines:\n",
+    "            par.axis[\"right\"].label.set_color(par_lines[0].get_color())\n",
+    "        # Shift the additional y-axis label further right to avoid overlapping\n",
+    "        par.axis[\"right\"].label.set_position((\"axes\", 1 + 0.1 * (idx - 1)))\n",
     "\n",
-    "    # Set Colors for Y-axis Labels to Match the Plot Lines\n",
-    "    host.axis[\"left\"].label.set_color(colors[0])\n",
-    "    for i, par in enumerate(par_axes):\n",
-    "        par.axis[\"right\"].label.set_color(colors[i+1])\n",
-    "\n",
-    "    # Adjust the Position of the Additional Axes Labels\n",
-    "    for i, par in enumerate(par_axes):\n",
-    "        par.axis[\"right\"].label.set_position((\"axes\", 1 + 0.1 * i))\n",
-    "\n",
-    "    # Add Zero Lines\n",
+    "    # --- Add Zero Lines ---\n",
     "    if add_zero_lines:\n",
-    "        host.axhline(0, color=colors[0], linestyle='--', linewidth=1)\n",
-    "        for i, par in enumerate(par_axes):\n",
-    "            par.axhline(0, color=colors[i+1], linestyle='--', linewidth=1)\n",
+    "        # For the host axis, use the color of its first series if available\n",
+    "        host_color = host_lines[0].get_color() if host_lines else 'black'\n",
+    "        host.axhline(0, color=host_color, linestyle='--', linewidth=1)\n",
+    "        for par in twin_axes:\n",
+    "            lines = par.lines\n",
+    "            par_color = lines[0].get_color() if lines else 'black'\n",
+    "            par.axhline(0, color=par_color, linestyle='--', linewidth=1)\n",
     "\n",
-    "    # Add Vertical Lines with Vertical (rotated) Labels Above the Plot\n",
+    "    # --- Add Vertical Lines with Vertical (Rotated) Labels Above the Plot ---\n",
     "    if vertical_lines:\n",
-    "        # Create a blended transform: x in data coords, y in axes fraction.\n",
     "        transform = blended_transform_factory(host.transData, host.transAxes)\n",
     "        for timestamp, state_name in vertical_lines:\n",
     "            host.axvline(x=timestamp, color='gray', linestyle='--', linewidth=1)\n",
@@ -146,24 +156,55 @@
     "                bbox=dict(facecolor='white', edgecolor='none', pad=1.0)\n",
     "            )\n",
     "\n",
-    "    # Create a Combined Legend\n",
-    "    host.legend(lines, labels, loc='upper left')\n",
-    "\n",
-    "    # Create a grid\n",
+    "    # --- Combined Legend, Grid, and Title ---\n",
+    "    host.legend(all_lines, all_leg_labels, loc='upper left')\n",
     "    host.grid()\n",
-    "\n",
-    "    # Set Title if provided\n",
     "    if title:\n",
     "        host.set_title(title)\n",
     "\n",
-    "    # Improve Layout to Prevent Overlapping Labels\n",
     "    fig.canvas.draw()\n",
     "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pressure_alt(p):\n",
+    "    return 44330 * (1 - (((p) / 1013.25)**( 1 / 5.255)))\n",
+    "\n",
+    "def zero_out_columns_before_phase(df, columns, flight_phase_value):\n",
+    "    # Find rows where flight_phase equals the target value\n",
+    "    phase_rows = df[df['flight_phase'] == flight_phase_value]\n",
+    "\n",
+    "    if phase_rows.empty:\n",
+    "        print(f\"Flight phase '{flight_phase_value}' not found. No changes made.\")\n",
+    "        return df\n",
+    "\n",
+    "    # Get the timestamp of the first occurrence of the flight phase\n",
+    "    first_phase_time = phase_rows.iloc[0]['timestamp']\n",
+    "\n",
+    "    # Zero out the specified columns for all rows with a timestamp earlier than first_phase_time\n",
+    "    df.loc[df['timestamp'] < first_phase_time, columns] = 0\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "def plot_columns(df, columns, y_ax_labels, **kwargs):\n",
+    "    plot_multiple_y_axes(\n",
+    "        x=df['timestamp']/1e6,\n",
+    "        y_data=[[df[col_name] for col_name in col_list] for col_list in columns],\n",
+    "        labels=[[col_name for col_name in col_list] for col_list in columns],\n",
+    "        x_label='Time (s)',\n",
+    "        y_labels=y_ax_labels,\n",
+    "        **kwargs\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,31 +346,19 @@
     "    for idx, transition in transitions.iterrows()\n",
     "]\n",
     "\n",
-    "def pressure_alt(p):\n",
-    "    return 44330 * (1 - (((p) / 1013.25)**( 1 / 5.255)))\n",
+    "# columns_to_zero = ['pos_vert', 'vel_vert']\n",
+    "# combined = zero_out_columns_before_phase(combined, columns_to_zero, 3)\n",
     "\n",
     "presalt = pressure_alt(combined['pressure']) - pressure_alt(combined['pressure'].iloc[0])\n",
+    "combined['pos_baro'] = presalt\n",
     "\n",
-    "times = combined['timestamp']/1e6\n",
-    "pressure = combined['pressure']\n",
-    "altitude = combined['pos_vert']\n",
-    "velocity = combined['vel_vert']\n",
-    "acceleration = combined['acc_vert']\n",
-    "\n",
-    "plot_multiple_y_axes(\n",
-    "    times,\n",
-    "    [altitude, velocity, acceleration, pressure],\n",
-    "    ['altitude', 'velocity', 'acceleration', 'pressure'],\n",
+    "plot_columns(\n",
+    "    combined,\n",
+    "    [['pos_vert', 'pos_ekf', 'pos_baro'], ['vel_vert', 'vel_ekf']],\n",
+    "    ['Altitude (m)', 'Velocity (m/s)'],\n",
     "    vertical_lines=transitions\n",
     ")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
